tests/grammar/types/var_type_annotation/type_fail_11/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:7:1
  |
7 | foo: Foo = 1
  | ^ expected Foo, got int(1)
  |